# seating

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: relationships.csv
seating/: __init__.py  __main__.py  annealing.py  arrangement.py  plotting.py  utils.py
